docs/api/graphql/v0/types/objects/sso-provider.mdx
---
pagination_next: null
pagination_prev: null
hide_table_of_contents: true
id: sso-provider
title: SsoProvider
---




export const Bullet = () => <><span style={{ fontWeight: 'normal', fontSize: '.5em', color: 'var(--ifm-color-secondary-darkest)' }}>&nbsp;●&nbsp;</span></>

export const SpecifiedBy = (props) => <>Specification<a className="link" style={{ fontSize:'1.5em', paddingLeft:'4px' }} target="_blank" href={props.url} title={'Specified by ' + props.url}>⎘</a></>

export const Badge = (props) => <><span className={props.class}>{props.text}</span></>

import { useState } from 'react';

export const Details = ({ dataOpen, dataClose, children, startOpen = false }) => {
  const [open, setOpen] = useState(startOpen);
  return (
    <details {...(open ? { open: true } : {})} className="details" style={{ border:'none', boxShadow:'none', background:'var(--ifm-background-color)' }}>
      <summary
        onClick={(e) => {
          e.preventDefault();
          setOpen((open) => !open);
        }}
        style={{ listStyle:'none' }}
      >
      {open ? dataOpen : dataClose}
      </summary>
      {open && children}
    </details>
  );
};








No description


```graphql
type SsoProvider {
  name: String!
  loginUrl: String!
  uiIconUrl: String
  uiLabel: String
}
```




### Fields

#### [<code style={{ fontWeight: 'normal' }}>SsoProvider.<b>name</b></code>](#)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>String!</b></code>](/api/graphql/v0/types/scalars/string.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> 



#### [<code style={{ fontWeight: 'normal' }}>SsoProvider.<b>loginUrl</b></code>](#)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>String!</b></code>](/api/graphql/v0/types/scalars/string.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> 
OAuth Login Flow URL


#### [<code style={{ fontWeight: 'normal' }}>SsoProvider.<b>uiIconUrl</b></code>](#)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>String</b></code>](/api/graphql/v0/types/scalars/string.mdx) <Badge class="badge badge--secondary " text="scalar"/> 
Optional icon URL for UI display


#### [<code style={{ fontWeight: 'normal' }}>SsoProvider.<b>uiLabel</b></code>](#)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>String</b></code>](/api/graphql/v0/types/scalars/string.mdx) <Badge class="badge badge--secondary " text="scalar"/> 
Optional label for UI display






### Member Of

[`Server`](/api/graphql/v0/types/objects/server.mdx)  <Badge class="badge badge--secondary badge--relation" text="object"/>