docs/api/graphql/v1/types/objects/sso-provider.mdx
---
pagination_next: null
pagination_prev: null
hide_table_of_contents: true
id: sso-provider
title: SsoProvider
---




export const Bullet = () => <><span style={{ fontWeight: 'normal', fontSize: '.5em', color: 'var(--ifm-color-secondary-darkest)' }}>&nbsp;●&nbsp;</span></>

export const SpecifiedBy = (props) => <>Specification<a className="link" style={{ fontSize:'1.5em', paddingLeft:'4px' }} target="_blank" href={props.url} title={'Specified by ' + props.url}>⎘</a></>

export const Badge = (props) => <><span className={props.class}>{props.text}</span></>

import { useState } from 'react';

export const Details = ({ dataOpen, dataClose, children, startOpen = false }) => {
  const [open, setOpen] = useState(startOpen);
  return (
    <details {...(open ? { open: true } : {})} className="details" style={{ border:'none', boxShadow:'none', background:'var(--ifm-background-color)' }}>
      <summary
        onClick={(e) => {
          e.preventDefault();
          setOpen((open) => !open);
        }}
        style={{ listStyle:'none' }}
      >
      {open ? dataOpen : dataClose}
      </summary>
      {open && children}
    </details>
  );
};








An SSO (Single Sign-On) provider configured for this Massdriver server.

Each provider represents an OAuth 2.0 or OpenID Connect identity provider that
users can authenticate with. Use the `loginUrl` to redirect users to the
provider's login page.


```graphql
type SsoProvider {
  name: String!
  loginUrl: String!
  uiIconUrl: String
  uiLabel: String
}
```




### Fields

#### [<code style={{ fontWeight: 'normal' }}>SsoProvider.<b>name</b></code>](#name)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>String!</b></code>](/api/graphql/v1/types/scalars/string.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#name\} 
The provider's identifier (e.g., `"google"`, `"okta"`, `"azure-ad"`).


#### [<code style={{ fontWeight: 'normal' }}>SsoProvider.<b>loginUrl</b></code>](#login-url)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>String!</b></code>](/api/graphql/v1/types/scalars/string.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#login-url\} 
The URL to redirect the user to in order to start the SSO login flow.


#### [<code style={{ fontWeight: 'normal' }}>SsoProvider.<b>uiIconUrl</b></code>](#ui-icon-url)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>String</b></code>](/api/graphql/v1/types/scalars/string.mdx) <Badge class="badge badge--secondary " text="scalar"/> \{#ui-icon-url\} 
URL of the provider's icon, for rendering on login buttons.


#### [<code style={{ fontWeight: 'normal' }}>SsoProvider.<b>uiLabel</b></code>](#ui-label)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>String</b></code>](/api/graphql/v1/types/scalars/string.mdx) <Badge class="badge badge--secondary " text="scalar"/> \{#ui-label\} 
Display label for the provider (e.g., `"Sign in with Google"`).






### Member Of

[`Server`](/api/graphql/v1/types/objects/server.mdx)  <Badge class="badge badge--secondary badge--relation" text="object"/>